# loom

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/scenes/: scene.loom
assets/shaders/: circle.frag  circle.vert  line.frag  line.vert  quad.frag  quad.vert  texture.frag  texture.vert
cmake/: vendors.cmake
engine/: CMakeLists.txt
engine/include/loom/: application.h  core.h
engine/include/loom/asset/: asset_manager.h
engine/include/loom/core/: application.h  core.h  input.h  key_codes.h  layer.h  layer_stack.h  log.h  mouse_codes.h  timestep.h  uuid.h  window.h
engine/include/loom/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/include/loom/imgui/: imgui_layer.h
engine/include/loom/math/: math.h
engine/include/loom/renderer/: buffer.h  camera.h  editor_camera.h  framebuffer.h  graphics_context.h  orthographic_camera.h  render_command.h  renderer_2d.h  renderer_api.h  shader.h  subtexture_2d.h  texture.h  vertex_array.h
engine/include/loom/scene/: components.h  entity.h  scene.h  scene_camera.h  scene_hierarchy_panel.h  scene_serializer.h  script_registry.h  scriptable_entity.h
engine/src/: application.cpp
engine/src/asset/: asset_manager.cpp
engine/src/core/: application.cpp  input.cpp  layer.cpp  layer_stack.cpp  log.cpp  uuid.cpp  window.cpp
engine/src/imgui/: imgui_layer.cpp
engine/src/math/: math.cpp
engine/src/platform/glfw/: glfw_input.cpp  glfw_input.h  glfw_window.cpp  glfw_window.h
engine/src/platform/linux/: linux_input.cpp  linux_input.h  linux_window.cpp  linux_window.h
engine/src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/src/platform/windows/: windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
engine/src/renderer/: buffer.cpp  editor_camera.cpp  framebuffer.cpp  orthographic_camera.cpp  render_command.cpp  renderer_2d.cpp  renderer_api.cpp  shader.cpp  subtexture_2d.cpp  texture.cpp  vertex_array.cpp
engine/src/scene/: components.cpp  scene.cpp  scene_camera.cpp  scene_hierarchy_panel.cpp  scene_serializer.cpp  script_registry.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
weaver/: CMakeLists.txt
weaver/src/: editor_layer.cpp  editor_layer.h  main.cpp
weaver/src/panels/: content_browser_panel.cpp  content_browser_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
weaver/src/scripts/: player_controller.cpp  player_controller.h
